welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:20: error: type mismatch;
 found   : Array[Int]
 required: Int
	return T
               ^